--- a/src/main/resources/webapp/order/admin/static/css/style.less
+++ b/src/main/resources/webapp/order/admin/static/css/style.less
@@ -40,7 +40,7 @@ body,html{
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-
+    position: relative;
     nav{
       .trans(0.5s ease);
       z-index: 1000;
