--- a/src/main/resources/webapp/order/admin/static/components/page/table/table.css
+++ b/src/main/resources/webapp/order/admin/static/components/page/table/table.css
@@ -1,22 +1,1 @@
-#map {
-  position: fixed;
-  top: 85px;
-  bottom: 0;
-  width: 100%;
-}
-#map .c-table span {
-  white-space: nowrap;
-  width: 60px !important;
-  height: 26px !important;
-  line-height: 26px;
-  background-color: #2ac845;
-  border-radius: 4px;
-  border: 1px solid #000;
-  color: #fff;
-  text-align: center;
-  display: block;
-}
-#map .c-table span.has-order {
-  background-color: #ddd;
-  border: none;
-}
+#map{position:fixed;top:85px;bottom:0;width:100%}#map .c-table span{white-space:nowrap;width:60px!important;height:26px!important;line-height:26px;background-color:#2ac845;border-radius:4px;border:1px solid #000;color:#fff;text-align:center;display:block}#map .c-table span.has-order{background-color:#ddd;border:0}
