--- a/src/main/resources/webapp/order/static/components/component/nav/nav.html
+++ b/src/main/resources/webapp/order/static/components/component/nav/nav.html
@@ -1,7 +1,7 @@
 <nav class="mui-bar mui-bar-tab">
     <a class="mui-tab-item" :class="{'mui-active':view=='order'}" v-link="{path:'/order'}">
         <span class="mui-icon mui-icon-phone"></span>
-        <span class="mui-tab-label" >订餐</span>
+        <span class="mui-tab-label" >服务</span>
     </a>
     <a class="mui-tab-item" :class="{'mui-active':view=='list'}" v-link="{path:'/list'}">
         <span class="mui-icon mui-icon-compose"></span>
