--- a/src/main/resources/webapp/order/static/components/page/food/food.less
+++ b/src/main/resources/webapp/order/static/components/page/food/food.less
@@ -6,13 +6,13 @@
         top:45px;
         bottom:50px;
         overflow-y: auto;
+        border-right: 1px solid #efefef;
 
         background-color: #FAFAFA;
 
         .mui-table-view{
             .mui-table-view-cell{
-                border-right: 1px solid #efefef;
-                background-color: #FAFAFA;
+                background-color: #F5F5F5;
                 font-size: 14px;
             }
 
@@ -48,7 +48,7 @@
             }
 
             .mui-numbox{
-                height: 25px;
+                height:30px;
             }
 
             .mui-media-body{
@@ -81,5 +81,8 @@
             padding: 10px;
         }
     }
-
+    .menu-img{
+        height: 50px !important;
+        width: 50px  !important;;
+    }
 }
