--- a/src/main/resources/webapp/order/static/components/page/list/list.html
+++ b/src/main/resources/webapp/order/static/components/page/list/list.html
@@ -1,7 +1,22 @@
-<header class="mui-bar-nav mui-bar">
-    <h5 class="mui-title">订单列表</h5>
-</header>
-<div class="mui-content">
+<div class="navbar">
+    <div class="bd" style="height: 100%;">
+        <div class="weui_tab">
+            <div class="weui_navbar">
+                <div :class="{weui_bar_item_on:view=='food'}" @click="onChangeView('food')" class="weui_navbar_item ">
+                    我的订餐
+                </div>
+                <div :class="{weui_bar_item_on:view=='goods'}" @click="onChangeView('goods')"  class="weui_navbar_item">
+                    我的订货
+                </div>
+            </div>
+            <div class="weui_tab_bd">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="mui-content" v-if="view=='food'" >
 
     <ul class="mui-table-view" style="margin-bottom: 50px">
         <li style="text-align: center" v-show="count ==0">
@@ -13,7 +28,26 @@
                     {{l.mdate}} {{l.mtime=="lunch"?"午餐":"晚餐"}}
                     <p class='mui-ellipsis'>{{l.table.no}}号桌({{l.table.type==0?"大厅":"包厢"}})  {{l.number}}人</p>
                 </div>
-                <span class="mui-badge mui-badge-primary" v-if="l.menu.length>0">已点餐</span>
+                <span class="mui-badge mui-badge-primary" v-if="l.menu.length>0&&!checkExpire(l)">已点餐</span>
+                <span class="mui-badge " v-if="checkExpire(l)">已过期</span>
+            </a>
+        </li>
+    </ul>
+</div>
+
+<div class="mui-content"  v-if="view=='goods'" >
+
+    <ul class="mui-table-view" style="margin-bottom: 50px">
+        <li style="text-align: center" v-show="count ==0">
+            暂无订单
+        </li>
+        <li class="mui-table-view-cell mui-media" v-for="l in list.goods" v-if="l.state>0">
+            <a class="mui-navigate-right" v-link="{path:'/order/goods/detail/'+l._id}">
+                <div class="mui-media-body">
+                    {{l.mdate}}
+                    <p class='mui-ellipsis'></p>
+                </div>
+                <span class="mui-badge mui-badge-primary" >已订货</span>
             </a>
         </li>
     </ul>
