--- a/src/main/resources/webapp/order/static/components/page/order/order.css
+++ b/src/main/resources/webapp/order/static/components/page/order/order.css
@@ -6,6 +6,9 @@
 .page-order .p-number span {
   font-size: 26px;
 }
+.page-order .mui-navigate-right {
+  line-height: 18px;
+}
 .page-order .disabled {
   color: #ccc !important;
 }
