--- a/src/main/resources/webapp/order/static/css/style.css
+++ b/src/main/resources/webapp/order/static/css/style.css
@@ -153,11 +153,7 @@ p img {
   max-width: 100%;
   height: auto;
 }
-.weui_cells_title {
-  margin-top: .77em;
-  margin-bottom: .3em;
-  padding-left: 15px;
-  padding-right: 15px;
-  color: #888;
-  font-size: 14px;
+.weui_navbar_item.weui_bar_item_on {
+  background-color: #09BB07 !important;
+  color: #fff;
 }
