--- a/src/main/resources/webapp/order/admin/static/components/page/config/config.html
+++ b/src/main/resources/webapp/order/admin/static/components/page/config/config.html
@@ -2,11 +2,13 @@
     <div class="panel panel-default content">
         <div class="panel-heading">
             <ul class="nav nav-pills pull-left">
-                <li role="presentation" class="active"><a href="javascript:;">
-                    基础配置</a></li>
+                <li role="presentation" @click="onChangeView('food')" :class="{active:view=='food'}"><a href="javascript:;">
+                    订餐配置</a></li>
+                <li role="presentation"  @click="onChangeView('goods')" :class="{active:view=='goods'}"><a href="javascript:;">
+                    订货配置</a></li>
             </ul>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" v-if="view=='food'">
 
             <div class="form-horizontal">
                <div class="form-group">
@@ -52,8 +54,24 @@
                 </div>
             </fieldset>
         </div>
-        <div class="panel-footer text-right">
+        <div class="panel-footer text-right" v-if="view=='food'">
             <a href="javascript:;" class="btn btn-primary" @click="onSubmit">提交</a>
         </div>
+
+        <div class="panel-body" v-if="view=='goods'">
+            <div class="form-horizontal">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">提前预定天数</label>
+                    <div class="col-sm-10">
+                        <input type="number"  class="form-control" v-model="gConfig.pre" >
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="panel-footer text-right" v-if="view=='goods'">
+            <a href="javascript:;" class="btn btn-primary" @click="onSubmitGoods">提交</a>
+        </div>
+
     </div>
 </div>
