--- a/src/main/resources/sources/front/components/page/index.html
+++ b/src/main/resources/sources/front/components/page/index.html
@@ -17,6 +17,6 @@
     <script src="/static/js/mui.picker.min.js"></script>
 <script type="text/javascript">
     require(["main/main.js"]);
-</script>
+</script>f
 </body>
 </html>
