--- a/src/main/resources/webapp/order/static/components/page/config/config.html
+++ b/src/main/resources/webapp/order/static/components/page/config/config.html
@@ -2,8 +2,8 @@
     <header>
 
 
-        <img src="/order/static/images/my.jpg" alt="" class="img-circle">
-        <h5>个人信息暂未开发</h5>
+        <img :src="user.headImgUrl" alt="" class="img-circle">
+        <h5>{{user.nickname}}</h5>
 
     </header>
 
