--- a/src/main/resources/webapp/order/static/components/component/nav/nav.html
+++ b/src/main/resources/webapp/order/static/components/component/nav/nav.html
@@ -3,7 +3,7 @@
         <span class="mui-icon mui-icon-phone"></span>
         <span class="mui-tab-label" >服务</span>
     </a>
-    <a class="mui-tab-item" :class="{'mui-active':view=='list'}" v-link="{path:'/list'}">
+    <a class="mui-tab-item" :class="{'mui-active':view=='list'}" v-link="{path:'/list/food'}">
         <span class="mui-icon mui-icon-compose"></span>
         <span class="mui-tab-label">订单</span>
     </a>
