--- a/src/main/resources/webapp/order/static/components/page/order/order.html
+++ b/src/main/resources/webapp/order/static/components/page/order/order.html
@@ -21,26 +21,26 @@
     <div v-show="view=='food'">
         <div class="weui_cells_title">预订日期</div>
         <form class="mui-input-group">
-            <div class="mui-input-row mui-radio" v-for="d in date">
+            <div class="mui-input-row mui-radio" v-for="d in date" @click="selectWeek(d.week)">
                 <label :for="d.value">{{d.value}} {{d.week}}</label>
                 <input name="date" type="radio"  v-model="params.mdate"  :value="d.value" :id="d.value">
             </div>
         </form>
-        <div class="weui_cells_title">预订人数</div>
+        <div class="weui_cells_title">就餐人数</div>
         <div class="mui-input-row mui-input-range" style="padding-left: 20px;">
-            <h4 class="p-number"><span>{{params.num}}</span> 人</h4>
-            <input type="range" id="block-range" value="5" min="1" max="20" data-input-slider="4" v-model="params.num">
+            <h4 class="p-number"><span class="number-tiaodong">{{params.num}}</span> 人</h4>
+            <input type="range" id="block-range" value="4" min="1" max="20" data-input-slider="4" v-model="params.num">
         </div>
         <div class="weui_cells_title">预订餐次</div>
         <div class="mui-card">
             <ul class="mui-table-view">
-                <li class="mui-table-view-cell"  >
+                <li class="mui-table-view-cell" v-if="lunchShow"  >
                     <a class="mui-navigate-right" @click="onSelect('lunch')"  :class="{disabled:!lunch}" >
                         午餐 <span v-show="!lunch">(今日已过期)</span>
                     </a>
                 </li>
-                <li class="mui-table-view-cell"  >
-                    <a  class="mui-navigate-right"  @click="onSelect('dinner')"  :class="{disabled:!dinner}"  >
+                <li class="mui-table-view-cell" v-if="dinnerShow"  >
+                    <a  class="mui-navigate-right"  @click="onSelect('dinner')"    :class="{disabled:!dinner}"  >
                         晚餐 <span v-show="!dinner">(今日已过期)</span>
                     </a>
                 </li>
@@ -48,15 +48,72 @@
         </div>
     </div>
     <div v-show="view=='goods'">
-        <div class="weui_cells_title">预订日期</div>
-        <ul class="mui-table-view">
-            <li class="mui-table-view-cell" v-for="d in gDate">
-                <a v-link="{path:'/order/goods/'+d.value}" class="mui-navigate-right">
-                   {{d.value}} {{d.week}}
-                </a>
+        <div v-if="canDH">
+            <div v-if="!hasDH">
+                <div class="weui_cells_title">取货日期</div>
+                <form class="mui-input-group">
+                    <div class="mui-input-row mui-radio" v-for="d in gDate" @click="selectDHdate(d)">
+                        <label :for="d.week">{{d.value}} {{d.week}}</label>
+                        <input name="date" type="radio"  v-model="gParams.mdate"  :value="d.value" :id="d.week">
+                    </div>
+                </form>
+                <div class="weui_cells_title">取货时间</div>
+                <div class="mui-card">
+                    <ul class="mui-table-view">
+                        <li class="mui-table-view-cell" v-if="selectDH.mtime.morning" >
+                            <a  v-if="!checkHasOrder(selectDH,'morning')" v-link="{path:'/goods/'+selectDH.value +'/morning/all'}" class="mui-navigate-right" >
+                                上午
+                            </a>
+                            <a href="javascript:;" v-else >
+                                上午   <span class="mui-badge ">已预订</span>
+                            </a>
 
-            </li>
-        </ul>
+                        </li>
+                        <li class="mui-table-view-cell" v-if="selectDH.mtime.noon"   >
+                            <a  v-if="!checkHasOrder(selectDH,'noon')" v-link="{path:'/goods/'+selectDH.value +'/noon/all'}"  class="mui-navigate-right" >
+                                中午
+                            </a>
+                            <a href="javascript:;" v-else >
+                                中午   <span class="mui-badge ">已预订</span>
+                            </a>
+                        </li>
+                        <li class="mui-table-view-cell" v-if="selectDH.mtime.afternoon"   >
+                            <a  v-if="!checkHasOrder(selectDH,'afternoon')"  v-link="{path:'/goods/'+selectDH.value +'/afternoon/all'}"  class="mui-navigate-right" >
+                                下午
+                            </a>
+                            <a href="javascript:;" v-else >
+                                下午   <span class="mui-badge">已预订</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div v-else>
+                <ul class="mui-table-view">
+                    <li class="mui-table-view-cell" style="text-align: center">
+                        您本周已经订货。
+                    </li>
+                </ul>
+
+                <div class="mui-content-padded">
+                    <a class="mui-btn mui-btn-block mui-btn-success" v-link="{path:'/list/goods'}" >查看订单</a>
+                </div>
+            </div>
+        </div>
+        <div v-if="!canDH">
+            <ul class="mui-table-view">
+                <li class="mui-table-view-cell" style="text-align: center">
+                    本周开放预定已经结束,请下周预定。
+                </li>
+            </ul>
+        </div>
+        <!--<ul class="mui-table-view">-->
+        <!--<li class="mui-table-view-cell" v-for="d in gDate">-->
+        <!--<a v-link="{path:'/goods/'+d.value +'/all'}" class="mui-navigate-right">-->
+        <!--{{d.value}} {{d.week}}-->
+        <!--</a>-->
+        <!--</li>-->
+        <!--</ul>-->
     </div>
 
 </div>
