--- a/src/main/resources/webapp/order/static/components/page/order/table/table.less
+++ b/src/main/resources/webapp/order/static/components/page/order/table/table.less
@@ -19,6 +19,12 @@
 
 }
 
+.table-icon{
+  color: #ffff00;
+  font-size: 12px;
+  border-radius: 4px;
+  z-index: 2000 !important;
+}
 
 .table-info{
   width: 200px;
