--- a/src/main/resources/webapp/order/static/pkg/all_5998f58.css
+++ b/src/main/resources/webapp/order/static/pkg/all_5998f58.css
@@ -615,7 +615,8 @@ p img {
   border: none;
 }
 .table-icon {
-  color: #ffff00;
+  color: #000;
+  text-shadow: 1px 1px   yellow;
   font-size: 12px;
   border-radius: 4px;
   z-index: 2000 !important;
