--- a/src/main/resources/sources/front/components/page/bus/bus.html
+++ b/src/main/resources/sources/front/components/page/bus/bus.html
@@ -1,6 +1,6 @@
 <div class="page-bus" >
     <header class="mui-bar mui-bar-nav">
-        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}}  ³µÅÆºÅ£º{{bus.sn}}
+        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}}  è½¦ç‰Œå·ï¼š{{bus.sn}}
             <p>{{bus.line}} {{bus.goff}}</p>
 
         </h5>
@@ -20,12 +20,12 @@
             <div class="bus-header">
                 <img class="bus-driver" src="/static/images/bus-driver.png">
 
-                <a class="void"></a> ¿ÉÑ¡
-                <a class="order"></a> ÒÑÑ¡
+                <a class="void"></a> å¯é€‰
+                <a class="order"></a> å·²é€‰
 
-                <span class="bus-door">Ç°ÃÅ</span>
+                <span class="bus-door">å‰é—¨</span>
             </div>
-            <div bus-header> ¼İÊ»Ô±£º{{bus.jsy}}£¨{{bus.tel}}£©</div>
+            <div bus-header> é©¾é©¶å‘˜ï¼š{{bus.jsy}}ï¼ˆ{{bus.tel}}ï¼‰</div>
             <table class="bus-body">
                 <tr v-repeat="r in bus.rows">
                     <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="click:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
