--- a/src/main/resources/sources/front/components/page/order/orderdetail/orderdetail.css
+++ b/src/main/resources/sources/front/components/page/order/orderdetail/orderdetail.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes twinkling{    /*透明度由0到1*/
+@-webkit-keyframes twinkling{
   0%{
     background-color: yellow;
   }
@@ -7,7 +7,7 @@
   }
 }
 
-@keyframes twinkling{    /*透明度由0到1*/
+@keyframes twinkling{
 0%{
   background-color: yellow;
 }
