--- a/src/main/resources/sources/front/components/page/validate/validate.scss
+++ b/src/main/resources/sources/front/components/page/validate/validate.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@-webkit-keyframes twinkling{    /*透明度由0到1*/
+@-webkit-keyframes twinkling{
   0%{
     background-color: yellow;
   }
@@ -19,7 +19,7 @@
   }
 }
 
-@keyframes twinkling{    /*透明度由0到1*/
+@keyframes twinkling{
   0%{
     background-color: yellow;
   }
