--- a/src/main/resources/sources/admin/components/page/login.html
+++ b/src/main/resources/sources/admin/components/page/login.html
@@ -17,7 +17,7 @@
                     </span>
                 </div>
                 <br><br>
-                <form action="/admin/user/login.json" method="post">
+                <form action="/bus/admin/user/login.json" method="post">
                     <div class="panel">
                         <div class="panel-head"><strong>登录框</strong></div>
                         <div class="panel-body" style="padding:30px;">
